[workspace]
members = ["secret-server-api"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenAPI Generator team and contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
